--- a/README.html
+++ b/README.html
@@ -1326,7 +1326,7 @@ body,
 <p>队列执行命令的时候，先查找是否有电话对应的录音，没有则使用TTS生成对应的语音，然后拨通指定的电话（VoIP），拨通后播放录音以实现提醒。</p>
 <p>未接通的则放到队尾，稍后再尝试拨通。</p>
 <p>统计总通话时长（不满一分钟的按一分钟计算），避免通话时长打光（本项目使用简码，通话套餐为3000分钟）。</p>
-<p>现阶段不设置验证，以后用的多了考虑设置用户和计费系统。</p>
+<p>要带用户和计费系统。</p>
 <h2 id="技术选型">技术选型</h2>
 <p>TTS：EdgeTTS<br>
 Web框架：Flask<br>
